Add privacy and terms page

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,12 @@ plugins:
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
-  - about.md
+  - _pages/about.md
+  - _pages/privacy.md
+  - _pages/terms.md
 
+include:
+  - _pages
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
 
