--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,9 @@ google_analytics: G-ZP4036KGWY
 # Adding this to verify site at Bing Webmaster Tools
 bing_webmaster: 93DE0DE6A7742CDF8FD21B7632E3D607
 
+# Adding this to verify site at Yandex Webmaster Tools
+yandex_webmaster: 487d95c859eb65be
+
 # Minima specific settings, which are only available from Minima 3.0 onward.
 minima:
   # Minima skin selection.
